INCONV-10 [+] Added min height to container to avoid overlapping layout with footer

--- a/src/components/CartContent/CartContent.css
+++ b/src/components/CartContent/CartContent.css
@@ -1,5 +1,5 @@
 .cart-wrapper {
-    height: 100vh;
+    min-height: 100vh;
 }
 
 .cart-page-headline {
